# C-SIMD-RNG-Lib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Development_Roadmap.md  File-Structure.md  INSTALLATION.md  LICENSE.md  README  README.md  ReadMe.md  SECURITY.md
.github/: FUNDING.yml
v1.5/Benchmarking/: BENCHMARK.md  benchmark_analyzer.py  benchmark_file_renamer.bat  benchmark_results.txt  benchmarking_plus_analysis.bat  bit_width_test.cpp  bitwidth_benchmark.cpp  enhanced_benchmark.cpp  enhanced_bitwidth_benchmark.cpp  pip+install+-r+requirements.txt  rng_benchmark_summary.csv  run_benchmarks.bat  simple_benchmark.cpp  universal_bench.cpp
v1.5/Benchmarking/benchmark_results/: manual_benchmark_script.bat
v1.5/Benchmarking/formatted_results/: benchmark_1024bit_1.txt  benchmark_1024bit_10.txt  benchmark_1024bit_11.txt  benchmark_1024bit_2.txt  benchmark_1024bit_3.txt  benchmark_1024bit_4.txt  benchmark_1024bit_5.txt  benchmark_1024bit_6.txt  benchmark_1024bit_7.txt  benchmark_1024bit_8.txt  benchmark_1024bit_9.txt  benchmark_128bit_1.txt  benchmark_128bit_10.txt  benchmark_128bit_11.txt  benchmark_128bit_2.txt  benchmark_128bit_3.txt  benchmark_128bit_4.txt  benchmark_128bit_5.txt  benchmark_128bit_6.txt  benchmark_128bit_7.txt  benchmark_128bit_8.txt  benchmark_128bit_9.txt  benchmark_16bit_1.txt  benchmark_16bit_10.txt  benchmark_16bit_11.txt  benchmark_16bit_2.txt  benchmark_16bit_3.txt  benchmark_16bit_4.txt  (+49 more)
v1.5/lib_files/: usage.md
v1.5/non-core-files/: CMakeLists.bth  CMakeLists.lnx  CMakeLists.txt  CMakeLists.win  universal_rng.def
v1.5/src/: `c++.code-workspace
v1.6/: CMakeLists.txt  README.md  g-petey_convo_refactor.md
v1.6/bench/: bench_compare_summary.txt  bench_lock_and_bench.cpp  bench_main.cpp  bench_results.csv  bench_scale_results.csv
v1.6/benchmarking/: bench_compare_rngs.cpp  bench_lock_and_bench.cpp  bench_results_small.csv  bench_scale.cpp
v1.6/cmake/: UniversalRng.pc.in  UniversalRngConfig.cmake.in
v1.6/include/: avx2_impl.h  avx512_impl.h  rng_common.h  rng_core.h  rng_distributions.h  runtime_detect.h  scalar_impl.h  simd_exp.h  simd_normal.h  sse2_impl.h  universal_rng.h  universal_rng_types.h  wyrand_impl.h
v1.6/src/: cpu_detect.cpp  opencl_isi.cpp  philox4x32_scalar.cpp  rng_distributions.cpp  runtime_detect.cpp  simd_avx2.cpp  simd_avx2_philox4x32.cpp  simd_avx2_xoshiro256ss.cpp  simd_avx512.cpp  simd_avx512_philox4x32.cpp  simd_avx512_xoshiro256ss.cpp  simd_neon_philox4x32.cpp  simd_normal_avx2.cpp  simd_normal_avx512.cpp  simd_normal_neon.cpp  simd_sse2.cpp  universal_rng.cpp  universal_rng_api.cpp  universal_rng_bitwidth.cpp  xoshiro256ss_scalar.cpp
v1.7/: CMakeLists.cpl  CMakeLists.old  CMakeLists.txt  README.md  filelist.md  filelist.txt  main.cpp  necesary_deps_by_OS.md
v1.7/_fresh_ok/: CMakeCache.txt  build.ninja  cmake_install.cmake
v1.7/bench/: bench_main.cpp
v1.7/build-clang/: CMakeCache.txt
v1.7/build-linux/: CMakeCache.txt  build.ninja  cmake_install.cmake
v1.7/build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  msvc_test.vcxproj  msvc_test.vcxproj.filters  ua_rng.sln  ua_rng.vcxproj  ua_rng.vcxproj.filters  ua_rng_shared.vcxproj
v1.7/build-msvc/msvc_test.dir/Release/: msvc_test.exe.recipe
v1.7/build-msvc/msvc_test.dir/Release/msvc_test.tlog/: Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
v1.7/build-msvc/ua_rng.dir/Release/: ua_rng.lib.recipe
v1.7/build-msvc/ua_rng.dir/Release/ua_rng.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
v1.7/build-msvc/ua_rng_shared.dir/Release/: ua_rng.dll.recipe
v1.7/build-msvc/ua_rng_shared.dir/Release/ua_rng_shared.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
v1.7/build-msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
v1.7/build-msvc/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
v1.7/build-msvc/x64/Release/INSTALL/: INSTALL.recipe
v1.7/build-msvc/x64/Release/INSTALL/INSTALL.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
v1.7/build-msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
v1.7/cmake/: ua_rngConfig.cmake.in
v1.7/docs/: CHANGELOG.md  CONTRIBUTING.md  Development_Roadmap.md  INSTALLATION.md  for_further_dev.md  g-petey_convo.md
v1.7/include/ua/: ua_cpuid.h  ua_features.h  ua_normal_ziggurat.h  ua_philox4x32_avx2.h  ua_platform.h  ua_rng.h  ua_xoroshiro256ss_avx2.h  ua_xoroshiro256ss_scalar.h
v1.7/linux/ua_rng-1.7/: README
v1.7/linux/ua_rng-1.7/include/ua/: ua_onefile.cpp  ua_rng.h
v1.7/macOS/ua_rng-1.7/include/ua/: ua_cpuid.h  ua_features.h  ua_xoroshiro256ss_scalar.h
v1.7/maccery/: CMakeLists.txt  HOW_FILES_SHOULD_BE.md  brnch_main.cpp  build_and_install_very_verbose.sh  cpuid.h  how_to_build_maclinux.md  lib_clean.sh  lil'_readme.md  macos.yml  notes.md  should_provide.md  ua_cuda_philox_cu  ua_xoroshiro128pp.h  xoroshiro256s_scalar.cpp  xoroshiro256ss_avx2.cpp  xoroshiro256ss_avx512.cpp  xoroshiro_scalar.cpp  xoshiro256ss_avx512-m512d.cpp  xoshiro256ss_avx512.cpp
v1.7/maccery/docs/: g-petey_convo.md
v1.7/msys2/ua_rng-1.7/include/ua/: ua_normal_avx2.h
v1.7/src/: ua_cpuid.cpp  ua_rng.cpp  xoshiro256ss_avx2.cpp  xoshiro256ss_avx512.cpp
v1.7/src/gpu/opencl/: ua_opencl_philox.cpp
v1.7/tests/: msvc_test.cpp  msvc_test.lll
v1.7/tools/: build_msvc.ps1  lib_build.sh  lib_scipt.sh  stage_dist.sh  ua_purge_cmake.ps1  ua_purge_cmake.sh
v1.7/win_msvc/ua_rng-1.7/include/ua/: ua_platform.h  ua_xoshiro256ss_avx512.h
v1.7/win_msys2/ua_rng-1.7/include/ua/: ua_philox4x32_avx2.h  ua_xoshiro256ss_avx2.h  ua_xoshiro256ss_scalar.h
(+49 files in other folders)
